--- a/options.html
+++ b/options.html
@@ -1,3 +1,8 @@
 <!doctype HTML>
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="css/options.css">
+<script src="js/jquery-1.9.1.min.js"></script>
+<script src="js/options.js"></script>
 <h2>Options</h2>
+<div id="add">add</div>
+<div id="items"></div>
