--- a/popup.html
+++ b/popup.html
@@ -5,12 +5,12 @@
 <script src="js/func.js"></script>
 <script src="js/org-clock.js"></script>
 <script src="js/popup.js"></script>
+<div id="links">
+  <a href="history.html">Summary</a>
+  <a href="options.html">Config</a>
+</div>
 <div id="timer">
   <div id="day"></div>
-  <div id="month"></div>
   <div id="week"></div>
-</div>
-<div id="links">
-  <a href="history.html">History</a>
-  <a href="options.html">Options</a>
+  <div id="month"></div>
 </div>
