--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="css/options.css">
 <script src="js/jquery-1.9.1.min.js"></script>
+<script src="js/func.js"></script>
 <script src="js/options.js"></script>
-<h2>Options</h2>
-<div id="add">add</div>
+<input type="submit" value="New Item" id="add">
 <div id="items"></div>
