[a, b]多匹配支持，以及UI改进

--- a/history.html
+++ b/history.html
@@ -5,6 +5,6 @@
 <script src="js/org-clock.js"></script>
 <script src="js/summary.js"></script>
 <div id="summary">
-  <pre id="org-show">
+  <pre id="items">
   </pre>
 </div>
