--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,8 @@
 <script src="js/org-clock.js"></script>
 <script src="js/popup.js"></script>
 <div id="links">
-  <a href="history.html">Summary</a>
-  <a href="options.html">Config</a>
+  <a href="options.html" target="_blank">设置</a>
+  <a href="history.html" target="_blank">总结</a>
 </div>
 <div id="timer">
   <div id="day"></div>
