confirm before modify config

--- a/options.html
+++ b/options.html
@@ -3,6 +3,15 @@
 <link rel="stylesheet" type="text/css" href="css/options.css">
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/func.js"></script>
+<script src="js/sayings.js"></script>
 <script src="js/options.js"></script>
 <input type="submit" value="New Item" id="add">
 <div id="items"></div>
+<div id="confirm">
+  <h2>你是认真的？</h2>
+  <h6>你要放宽对自己的要求，为了确认你不会后悔，把下面的话打一遍。</h6>
+  <p></p>
+  <textarea></textarea>
+  <div id="confirm-sure">我确定</div>
+  <div id="confirm-cancel">取消</div>
+</div>
