showing saying when block

--- a/block.html
+++ b/block.html
@@ -7,8 +7,10 @@
   <div id="day"></div>
   <div id="week"></div>
   <div id="month"></div>
+  <div id="saying"></div>
 </article>
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/func.js"></script>
+<script src="js/sayings.js"></script>
 <script src="js/org-clock.js"></script>
 <script src="js/block.js"></script>
